# ircp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu-latest.yml  win64-latest.yml
doc/: BuildBoost.md  IRCP-Protocol-Specification-v1.0.txt  NetworkingDebug.md  SSL.md
source/client/: CMakeLists.txt  client.cc  client.rc  manifest.xml
source/client/razer/: ChromaLogger_ircp.cpp  razer_chroma.cc  razer_chroma.hh
source/server/: CMakeLists.txt  server.cc  server.rc
source/server/binaries/: ircp.conf
source/shared/: logo.hh  pch.hh
source/shared/config/: config.cc  config.hh
source/shared/logging/: logging.hh  logging_boost.cc
source/shared/network/: listener.hh  package.hh  package_global.cc  package_global.hh  socket.cc  socket.hh
source/shared/utilities/: constructor_policies.hh  exceptions.hh  hook_signals.hh
test/: CMakeLists.txt  example.cc
